--- a/test/data/meta/bar/index.css
+++ b/test/data/meta/bar/index.css
@@ -1,3 +1,3 @@
 body {
-    background: #FFF url("images/icon.png#nocache") no-repeat;
+    background: #FFF url("images/icon.png#nocache?ver=0.1") no-repeat;
 }
