--- a/test/data/output/vendor.css
+++ b/test/data/output/vendor.css
@@ -6,7 +6,7 @@ header {
 
 /* css-assets: "../meta/foo/uri.css" */
 body {
-    background-image: url("assets/assets/hey.png?ver=0.0.3");
+    background-image: url("./assets/assets/hey.png?ver=0.0.3");
 }
 
 /* css-assets: "../meta/foo/another.css" */
@@ -16,5 +16,5 @@ html {
 
 /* css-assets: "../meta/bar/index.css" */
 body {
-    background: #FFF url("assets/images/icon.png#nocache") no-repeat;
+    background: #FFF url("./assets/images/icon.png#nocache?ver=0.1") no-repeat;
 }
